--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.18.0",
+    "@preline/overlay": "^2.0.2",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-modern-drawer": "^1.2.2",
     "react-router": "^6.21.2",
     "react-router-dom": "^6.21.2"
   },
